tests/parser/statement_assign_err10.expected
Syntax Error: line 4:
Unexpected token (TOK_SEMICOLON, ';'), likely missing a(n)  
  'TOK_LPAREN' or
  'TOK_KEY_NOT' or
Possibly due to malformed or missing:
  Non-terminal: 'Variable' or
  Non-terminal: 'Type'
