tests/parser/statement_assign_err10.mtp
begin
	(*nothing after assignment*)
	(*assignment statement: with terms*)
	something :=;
end
.